--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ nav {
     display: flex;
     justify-content: center;
     background-color: #333;
-    width: 100%; /* Full width */
+    width: 100%;
 }
 
 .link-container {
